--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 // Add tags to blog elements -done
 // Replace svg in navbar with actual elements - done
 // Add dropdown navbar to hamburger - done
-// Optimize all images for webp/avif - in progress
+// Optimize all images for webp/avif - done
 
